--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
-body{
+body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
-#header{
+
+#header {
     background-image: url('./assets/Hero-bg.png');
     height: 40rem;
     display: flex;
@@ -11,26 +12,34 @@ body{
     align-items: center;
     margin-bottom: 2rem;
 }
-.why-web-development{
+
+.why-web-development {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 70rem;
 }
-#why-webdevlopment-section{
+
+#why-webdevlopment-section {
     width: 1200px;
-margin: auto;
-background-color: rgb(253, 248, 248);
-padding: 3rem;
+    margin: auto;
+    background-color: rgb(253, 248, 248);
+    padding: 3rem;
 }
-#web-dev-header{
+
+#web-dev-header {
     text-align: center;
 }
-#my-inspiration{
-   /* width: 1200px; */
-   /* margin: auto; */
-   display: flex;
-   flex-direction: column;
-   /* justify-content: center; */
-   align-items: center;
+
+#my-inspiration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.terget-tec{
+    display: flex;
+}
+.tec-img{
+    margin-right: 2rem;
+    margin-left: 1rem;
 }
