--- a/index.css
+++ b/index.css
@@ -12,12 +12,20 @@ body {
     align-items: center;
     margin-bottom: 2rem;
 }
+#youtube-link{
+    border: 0.1rem solid rgb(44, 38, 38);
+    padding: 1rem;
+}
 
 .why-web-development {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 70rem;
+    background-color: white;
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
 }
 
 #why-webdevlopment-section {
@@ -27,6 +35,7 @@ body {
     padding: 3rem;
 }
 
+
 #web-dev-header {
     text-align: center;
 }
@@ -35,6 +44,31 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#html-css-js{
+    display: flex;
+    justify-content: center;
+}
+#html-css-js > div{
+   width: 20rem;
+   margin: 2rem;
+   padding: 1rem;
+   border-radius: 0.5rem;
+}
+#html-css-js > div:nth-child(1){
+    background-color: rgb(231, 224, 214);
+}
+#html-css-js > div:nth-child(2){
+    background-color: rgb(243, 197, 134);
+}
+#html-css-js > div:nth-child(3){
+    background-color: rgb(208, 212, 207);
+}
+#current-target-html-css-js{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 .terget-tec{
     display: flex;
@@ -48,8 +82,58 @@ body {
     margin-right: 2rem;
     margin-left: 1rem;
 }
+#current-target-section{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
 #current-target{
     text-align: center;
+}
+
+#contact-button{
+    width: 12rem;
+    height: 2.5rem;
+    background-color: black;
+    font-size:large;
+    font-weight: bold;
+    border-radius: 0.5rem;
+}
+#contact-button>a{
+    text-decoration: none;
+    color: white;
+}
+
+#form-support{
+    background-image: url('./assets/handshake.jpg');
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 72rem;
+    height: 21.8rem;
+    margin: auto;
+    border-radius: 1rem;
+    color: white;
+}
+#form-description{
+    width: 45rem;
+    text-align: center;
+}
+#input-field{
+    width: 20rem;
+    height: 2rem;
+    border: 0.1rem solid rgb(41, 16, 16);
+    border-radius: 0.5rem;
+    margin-top: 1rem;
+}
+#input-field-button{
+    height: 2.2rem;
+    border: 0.1rem solid rgb(41, 16, 16);
+    border-radius: 0.5rem;
 }
 footer{
     display: flex;
@@ -59,32 +143,11 @@ footer{
     margin-top: 2rem;
 
 }
+
 footer>div>a{
     margin-left: 1rem;
+    width: 1%;
 }
-#form-support{
-    background-image: url('./assets/handshake.jpg');
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 75rem;
-    height: 21.8rem;
-    margin: auto;
-    border-radius: 1rem;
-}
-#input-field{
-    width: 20rem;
-    height: 2rem;
-    border: 0.1rem solid rgb(41, 16, 16);
-    border-radius: 0.5rem;
-}
-#input-field-button{
-    height: 2.2rem;
-    border: 0.1rem solid rgb(41, 16, 16);
-    border-radius: 0.5rem;
-}
-#current-target-section{
-    width: 75rem;
-    margin: auto;
+footer>div>a img{
+    width: 17%;
 }
